--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             >Web<span class="text">Studio</span></a
           >
           <ul class="menu">
-            <li><a class="link" href="./index.html">Studio</a></li>
+            <li><a class="link link-first" href="./index.html">Studio</a></li>
             <li><a class="link" href="">Portfolio</a></li>
             <li><a class="link" href="">Contacts</a></li>
           </ul>
@@ -60,11 +60,17 @@
         </div>
       </section>
 
-      <section class="features">
+      <section class="advantages">
         <div class="container">
-          <h2 class="visually-hidden">Features</h2>
+          <h2 class="visually-hidden">Our Advantages</h2>
           <ul class="cards">
             <li class="card">
+              <div class="icons">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+                <use>
+              </div>
               <h3 class="title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -72,6 +78,12 @@
               </p>
             </li>
             <li class="card">
+              <div class="icons">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+                <use>
+              </div>
               <h3 class="title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -79,6 +91,12 @@
               </p>
             </li>
             <li class="card">
+              <div class="icons">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+                <use>
+              </div>
               <h3 class="title">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
@@ -86,6 +104,12 @@
               </p>
             </li>
             <li class="card">
+              <div class="icons">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+                <use>
+              </div>
               <h3 class="title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -109,6 +133,33 @@
               <div class="info">
                 <h3 class="info-title">Mark Guerrero</h3>
                 <p class="info-text">Product Designer</p>
+                <ul class="social-media">
+                  <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                 </ul>
               </div>
             </li>
             <li class="card">
@@ -120,6 +171,33 @@
               <div class="info">
                 <h3 class="info-title">Tom Ford</h3>
                 <p class="info-text">Frontend Developer</p>
+                <ul class="social-media">
+                  <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                 </ul>
               </div>
             </li>
             <li class="card">
@@ -131,6 +209,33 @@
               <div class="info">
                 <h3 class="info-title">Camila Garcia</h3>
                 <p class="info-text">Marketing</p>
+                <ul class="social-media">
+                  <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                 </ul>
               </div>
             </li>
             <li class="card">
@@ -142,6 +247,33 @@
               <div class="info">
                 <h3 class="info-title">Daniel Wilson</h3>
                 <p class="info-text">UI Designer</p>
+                <ul class="social-media">
+                  <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook1"></use>
+                      </svg>
+                    </a>
+                      <li class="element">
+                    <a class="link" href="">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
