--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <ul class="cards">
             <li class="card">
               <div class="icons">
-                <svg class="icon">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
                 <use>
@@ -79,7 +79,7 @@
             </li>
             <li class="card">
               <div class="icons">
-                <svg class="icon">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
                 <use>
@@ -92,7 +92,7 @@
             </li>
             <li class="card">
               <div class="icons">
-                <svg class="icon">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
                 <use>
@@ -105,7 +105,7 @@
             </li>
             <li class="card">
               <div class="icons">
-                <svg class="icon">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
                 <use>
@@ -136,30 +136,30 @@
                 <ul class="social-media">
                   <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
-                 </ul>
+                </ul>
               </div>
             </li>
             <li class="card">
@@ -174,30 +174,30 @@
                 <ul class="social-media">
                   <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
-                 </ul>
+                </ul>
               </div>
             </li>
             <li class="card">
@@ -212,30 +212,30 @@
                 <ul class="social-media">
                   <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
-                 </ul>
+                </ul>
               </div>
             </li>
             <li class="card">
@@ -250,25 +250,25 @@
                 <ul class="social-media">
                   <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                       <li class="element">
                     <a class="link" href="">
-                      <svg class="icon">
+                      <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
@@ -285,66 +285,84 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="cards">
             <li class="card">
-              <img
+              <div class="picture">
+                <img
                 src="./images/img5.jpg"
                 alt="Photo of Banking App"
                 width="360"
-              />
+                />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="info">
                 <h3 class="info-title">Banking App</h3>
                 <p class="info-text">App</p>
               </div>
             </li>
             <li class="card">
-              <img
+              <div class="picture">
+                <img
                 src="./images/img6.jpg"
-                alt="Photo of Cashless Payment"
+                alt="Photo of Banking App"
                 width="360"
-              />
+                />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="info">
                 <h3 class="info-title">Cashless Payment</h3>
                 <p class="info-text">Marketing</p>
               </div>
             </li>
             <li class="card">
-              <img
+              <div class="picture">
+                <img
                 src="./images/img7.jpg"
-                alt="Photo of Meditation App"
+                alt="Photo of Banking App"
                 width="360"
-              />
+                />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="info">
                 <h3 class="info-title">Meditation App</h3>
                 <p class="info-text">App</p>
               </div>
             </li>
             <li class="card">
-              <img
+              <div class="picture">
+                <img
                 src="./images/img8.jpg"
-                alt="Photo of Taxi Service"
+                alt="Photo of Banking App"
                 width="360"
-              />
+                />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="info">
                 <h3 class="info-title">Taxi Service</h3>
                 <p class="info-text">Marketing</p>
               </div>
             </li>
             <li class="card">
-              <img
+              <div class="picture">
+                <img
                 src="./images/img9.jpg"
-                alt="Photo of Screen Illustrations"
+                alt="Photo of Banking App"
                 width="360"
-              />
+                />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="info">
                 <h3 class="info-title">Screen Illustrations</h3>
                 <p class="info-text">Design</p>
               </div>
             </li>
             <li class="card">
-              <img
+              <div class="picture">
+                <img
                 src="./images/img10.jpg"
-                alt="Photo of Online Courses"
+                alt="Photo of Banking App"
                 width="360"
-              />
+                />
+                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
               <div class="info">
                 <h3 class="info-title">Online Courses</h3>
                 <p class="info-text">Marketing</p>
@@ -357,13 +375,46 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
-          >Web<span class="text">Studio</span></a
-        >
-        <p class="text">
+        <div class="row">
+          <a class="logo" href="./index.html">Web<span class="text">Studio</span></a>
+          <p class="text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
-        </p>
+          </p>
+        </div>
+        <div class="row-social">
+          <p class="title">Social media</p>
+          <ul class="social-media">
+            <li class="element">
+              <a class="link" href="">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram2" ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="element">
+              <a class="link" href="">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter2" ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="element">
+              <a class="link" href="">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook2" ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="element">
+              <a class="link" href="">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin2" ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
