--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
                 <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
-                <use>
               </div>
               <h3 class="title">Strategy</h3>
               <p class="text">
@@ -82,7 +81,6 @@
                 <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
-                <use>
               </div>
               <h3 class="title">Punctuality</h3>
               <p class="text">
@@ -95,7 +93,6 @@
                 <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
-                <use>
               </div>
               <h3 class="title">Diligence</h3>
               <p class="text">
@@ -108,7 +105,6 @@
                 <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
-                <use>
               </div>
               <h3 class="title">Technologies</h3>
               <p class="text">
@@ -140,19 +136,25 @@
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
@@ -178,19 +180,25 @@
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
@@ -216,19 +224,25 @@
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
@@ -254,19 +268,25 @@
                         <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
-                      <li class="element">
+                  </li>
+
+                  <li class="element">
                     <a class="link" href="">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin1"></use>
@@ -287,11 +307,15 @@
             <li class="card">
               <div class="picture">
                 <img
-                src="./images/img5.jpg"
-                alt="Photo of Banking App"
-                width="360"
+                  src="./images/img5.jpg"
+                  alt="Photo of Banking App"
+                  width="360"
                 />
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="info">
                 <h3 class="info-title">Banking App</h3>
@@ -301,11 +325,15 @@
             <li class="card">
               <div class="picture">
                 <img
-                src="./images/img6.jpg"
-                alt="Photo of Banking App"
-                width="360"
+                  src="./images/img6.jpg"
+                  alt="Photo of Banking App"
+                  width="360"
                 />
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="info">
                 <h3 class="info-title">Cashless Payment</h3>
@@ -315,11 +343,15 @@
             <li class="card">
               <div class="picture">
                 <img
-                src="./images/img7.jpg"
-                alt="Photo of Banking App"
-                width="360"
+                  src="./images/img7.jpg"
+                  alt="Photo of Banking App"
+                  width="360"
                 />
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="info">
                 <h3 class="info-title">Meditation App</h3>
@@ -329,11 +361,15 @@
             <li class="card">
               <div class="picture">
                 <img
-                src="./images/img8.jpg"
-                alt="Photo of Banking App"
-                width="360"
+                  src="./images/img8.jpg"
+                  alt="Photo of Banking App"
+                  width="360"
                 />
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="info">
                 <h3 class="info-title">Taxi Service</h3>
@@ -343,11 +379,15 @@
             <li class="card">
               <div class="picture">
                 <img
-                src="./images/img9.jpg"
-                alt="Photo of Banking App"
-                width="360"
+                  src="./images/img9.jpg"
+                  alt="Photo of Banking App"
+                  width="360"
                 />
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="info">
                 <h3 class="info-title">Screen Illustrations</h3>
@@ -357,11 +397,15 @@
             <li class="card">
               <div class="picture">
                 <img
-                src="./images/img10.jpg"
-                alt="Photo of Banking App"
-                width="360"
+                  src="./images/img10.jpg"
+                  alt="Photo of Banking App"
+                  width="360"
                 />
-                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="info">
                 <h3 class="info-title">Online Courses</h3>
@@ -376,10 +420,12 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <a class="logo" href="./index.html">Web<span class="text">Studio</span></a>
+          <a class="logo" href="./index.html"
+            >Web<span class="text">Studio</span></a
+          >
           <p class="text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
           </p>
         </div>
         <div class="row-social">
@@ -388,28 +434,28 @@
             <li class="element">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram2" ></use>
+                  <use href="./images/icons.svg#icon-instagram2"></use>
                 </svg>
               </a>
             </li>
             <li class="element">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter2" ></use>
+                  <use href="./images/icons.svg#icon-twitter2"></use>
                 </svg>
               </a>
             </li>
             <li class="element">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook2" ></use>
+                  <use href="./images/icons.svg#icon-facebook2"></use>
                 </svg>
               </a>
             </li>
             <li class="element">
               <a class="link" href="">
                 <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin2" ></use>
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
                 </svg>
               </a>
             </li>
